--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "4.16.2"
   },
   "devDependencies": {
-    "nodemon": "1.14.11"
+    "nodemon": "^1.14.11"
   },
   "description": ""
 }
